--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ff5469a5",
    "metadata": {},
    "outputs": [
@@ -21,8 +21,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9294fda3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading: avineshprabhakaran/loan-eligibility-prediction\n",
+      "Dataset URL: https://www.kaggle.com/datasets/avineshprabhakaran/loan-eligibility-prediction\n",
+      "Downloaded to ./data/\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customer_ID</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Married</th>\n",
+       "      <th>Dependents</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Self_Employed</th>\n",
+       "      <th>Applicant_Income</th>\n",
+       "      <th>Coapplicant_Income</th>\n",
+       "      <th>Loan_Amount</th>\n",
+       "      <th>Loan_Amount_Term</th>\n",
+       "      <th>Credit_History</th>\n",
+       "      <th>Property_Area</th>\n",
+       "      <th>Loan_Status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>569</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>No</td>\n",
+       "      <td>2378</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>360</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Urban</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1299</td>\n",
+       "      <td>1086.0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>120</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Urban</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>95</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Not Graduate</td>\n",
+       "      <td>No</td>\n",
+       "      <td>3620</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>120</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Semiurban</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>134</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>3459</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>120</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Semiurban</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>556</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Graduate</td>\n",
+       "      <td>No</td>\n",
+       "      <td>5468</td>\n",
+       "      <td>1032.0</td>\n",
+       "      <td>26</td>\n",
+       "      <td>360</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Semiurban</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Customer_ID  Gender Married  Dependents     Education Self_Employed  \\\n",
+       "0          569  Female      No           0      Graduate            No   \n",
+       "1           15    Male     Yes           2      Graduate            No   \n",
+       "2           95    Male      No           0  Not Graduate            No   \n",
+       "3          134    Male     Yes           0      Graduate           Yes   \n",
+       "4          556    Male     Yes           1      Graduate            No   \n",
+       "\n",
+       "   Applicant_Income  Coapplicant_Income  Loan_Amount  Loan_Amount_Term  \\\n",
+       "0              2378                 0.0            9               360   \n",
+       "1              1299              1086.0           17               120   \n",
+       "2              3620                 0.0           25               120   \n",
+       "3              3459                 0.0           25               120   \n",
+       "4              5468              1032.0           26               360   \n",
+       "\n",
+       "   Credit_History Property_Area Loan_Status  \n",
+       "0               1         Urban           N  \n",
+       "1               1         Urban           Y  \n",
+       "2               1     Semiurban           Y  \n",
+       "3               1     Semiurban           Y  \n",
+       "4               1     Semiurban           Y  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Just import and run\n",
+    "from scripts.data_fetch import download_dataset\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Download\n",
+    "download_dataset()\n",
+    "\n",
+    "# # Load data\n",
+    "df = pd.read_csv('data/Loan Eligibility Prediction.csv')  # adjust filename if needed\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "433270e1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -30,7 +207,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "loan-analysis",
    "language": "python",
    "name": "python3"
   },
@@ -44,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
