first draft completed-revised

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -4,12 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "43df4005-d503-4c72-9f49-b9b82495a286",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -317,14 +312,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "id": "338e2c29-0e82-4535-97ca-09c154edbe24",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -359,14 +349,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "id": "29eae94b-7848-4921-9ac6-74430c2f243b",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -863,7 +848,7 @@
        "Loan_Status            NaN     NaN      NaN      NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,12 +877,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "5279d3b8-6df5-4693-8b95-2ae7388770a8",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1083,12 +1063,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "13147623-7ef2-4536-87be-0a07b3a7c1b4",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1448,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "id": "1c022eb0-e5fe-4990-913d-33fb3eb596b5",
    "metadata": {},
    "outputs": [
@@ -1457,23 +1432,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-8edb893f1bd941529de95b85fb4f89c3.vega-embed {\n",
+       "  #altair-viz-2d0e028522454abcb0075cc6b3eaa279.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-8edb893f1bd941529de95b85fb4f89c3.vega-embed details,\n",
-       "  #altair-viz-8edb893f1bd941529de95b85fb4f89c3.vega-embed details summary {\n",
+       "  #altair-viz-2d0e028522454abcb0075cc6b3eaa279.vega-embed details,\n",
+       "  #altair-viz-2d0e028522454abcb0075cc6b3eaa279.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-8edb893f1bd941529de95b85fb4f89c3\"></div>\n",
+       "<div id=\"altair-viz-2d0e028522454abcb0075cc6b3eaa279\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-8edb893f1bd941529de95b85fb4f89c3\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-8edb893f1bd941529de95b85fb4f89c3\");\n",
+       "    if (outputDiv.id !== \"altair-viz-2d0e028522454abcb0075cc6b3eaa279\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-2d0e028522454abcb0075cc6b3eaa279\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -1528,12 +1503,14 @@
        "alt.VConcatChart(...)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# comparing numerical feature densities across classes\n",
+    "\n",
     "import altair as alt\n",
     "import pandas as pd\n",
     "from typing import List\n",
@@ -1609,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "id": "8e65879b-8cbb-4754-9f89-838bf84378d3",
    "metadata": {},
    "outputs": [
@@ -1618,23 +1595,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-edfca0d453894b079382ece3077d3beb.vega-embed {\n",
+       "  #altair-viz-b7eec9aaeb4547b7a30d5ce6ab697048.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-edfca0d453894b079382ece3077d3beb.vega-embed details,\n",
-       "  #altair-viz-edfca0d453894b079382ece3077d3beb.vega-embed details summary {\n",
+       "  #altair-viz-b7eec9aaeb4547b7a30d5ce6ab697048.vega-embed details,\n",
+       "  #altair-viz-b7eec9aaeb4547b7a30d5ce6ab697048.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-edfca0d453894b079382ece3077d3beb\"></div>\n",
+       "<div id=\"altair-viz-b7eec9aaeb4547b7a30d5ce6ab697048\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-edfca0d453894b079382ece3077d3beb\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-edfca0d453894b079382ece3077d3beb\");\n",
+       "    if (outputDiv.id !== \"altair-viz-b7eec9aaeb4547b7a30d5ce6ab697048\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-b7eec9aaeb4547b7a30d5ce6ab697048\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -1689,7 +1666,7 @@
        "alt.VConcatChart(...)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1768,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "id": "5e0c918b-b15d-48b6-820a-7a73c6141c6e",
    "metadata": {},
    "outputs": [
@@ -1777,23 +1754,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-3414b1755ed148ddb919060d5e713fe6.vega-embed {\n",
+       "  #altair-viz-3a513530cea046d682cc06256c1a3505.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-3414b1755ed148ddb919060d5e713fe6.vega-embed details,\n",
-       "  #altair-viz-3414b1755ed148ddb919060d5e713fe6.vega-embed details summary {\n",
+       "  #altair-viz-3a513530cea046d682cc06256c1a3505.vega-embed details,\n",
+       "  #altair-viz-3a513530cea046d682cc06256c1a3505.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-3414b1755ed148ddb919060d5e713fe6\"></div>\n",
+       "<div id=\"altair-viz-3a513530cea046d682cc06256c1a3505\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-3414b1755ed148ddb919060d5e713fe6\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-3414b1755ed148ddb919060d5e713fe6\");\n",
+       "    if (outputDiv.id !== \"altair-viz-3a513530cea046d682cc06256c1a3505\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-3a513530cea046d682cc06256c1a3505\");\n",
        "    }\n",
        "\n",
        "    const paths = {\n",
@@ -1848,7 +1825,7 @@
        "alt.LayerChart(...)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1919,6 +1896,14 @@
     "\n",
     "correlation_plot(data=data, column_names=numerical_features)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d7ec1ad-eed9-4614-8570-847df4902e0a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
