data preprocessing and model training code added

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "138c93c4",
+   "metadata": {},
+   "source": [
+    "# Loan Eligibility Prediction Analysis and Model training/testing file"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82767def",
+   "metadata": {},
+   "source": [
+    "## Sanity Check"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "ff5469a5",
    "metadata": {},
    "outputs": [
@@ -10,18 +26,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello team\n"
+      "Confirming that relative imports work\n"
      ]
     }
    ],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "from scripts.temp import temp_fun\n",
     "temp_fun()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1193d351",
+   "metadata": {},
+   "source": [
+    "## Fetch and Read the data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "9294fda3",
    "metadata": {},
    "outputs": [
@@ -178,7 +204,7 @@
        "4               1     Semiurban           Y  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,12 +223,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b17a01d3",
+   "metadata": {},
+   "source": [
+    "## Exploratory Data Analysis\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "433270e1",
+   "id": "731c567f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# cell for EDA functions "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f280626d",
+   "metadata": {},
+   "source": [
+    "## Model Training "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "433270e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Data preprocessed with one-hot encoding\n",
+      "  Training samples: 491\n",
+      "  Testing samples: 123\n",
+      "  Number of features: 12\n",
+      "  Target distribution - Approved: 422, Rejected: 192\n",
+      "\n",
+      "Training Logistic Regression...\n",
+      "\n",
+      "Model trained successfully\n",
+      "  Training Accuracy: 0.8086\n",
+      "\n",
+      "Model saved to: models/logistic_regression_model.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scripts.model_train import *\n",
+    "\n",
+    "# Preprocess\n",
+    "X_train, X_test, y_train, y_test, features, scaler = preprocess_data(df)\n",
+    "\n",
+    "# Train and save model\n",
+    "model = train_classifier(X_train, y_train)\n"
+   ]
   }
  ],
  "metadata": {
