--- a/loan-analysis.ipynb
+++ b/loan-analysis.ipynb
@@ -2167,6 +2167,26 @@
     ")\n",
     "roc_disp.ax_.set_title(\"ROC Curve\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27c25f0f",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "\n",
+    "Dataset Source: [Kaggle Loan Prediction Dataset](https://www.kaggle.com/datasets/avineshprabhakaran/loan-eligibility-prediction)\n",
+    "\n",
+    "ChatGPT helped us restructure and better present the data analysis section.\n",
+    "\n",
+    "MDS DSCI 522 Textbook: [Link](https://ubc-dsci.github.io/reproducible-and-trustworthy-workflows-for-data-science/)\n",
+    "\n",
+    "Reference to Data Visualizations: Machine Learning an Algorithmic Perspective by Stephen Marsland\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
