add visualization analysis

--- a/loan-analysis.ipynb
+++ b/loan-analysis.ipynb
@@ -1975,6 +1975,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d09a3211",
+   "metadata": {},
+   "source": [
+    "Based on the confusion matrix, we can derive several key performance metrics for our loan eligibility prediction model. The model correctly predicted 18 loan denials and 81 loan approvals. The model incorrectly predicted 20 loan denials as approvals (false positives) and 4 loan approvals as denials (false negatives). From this, we can see that the model is better at predicting approvals than denials. Depending on the business context, we may prefer to minimize the false negatives to avoid losing out on potential customers who would have been approved for loans. But, we also need to consider the cost of false positives and minimizing the number of bad loans approved. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f9ee5a8e",
    "metadata": {},
    "source": [
@@ -2076,6 +2084,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "86b5b03f",
+   "metadata": {},
+   "source": [
+    "From the classification report, we can see that the false precision is 0.82. Meaning that when the model predicts a loan will be denied, it is correct 82% of the time. The recall is 0.47, meaning that the model correctly identifies 47% of all actual loan denials. The true precision is 0.80, meanin gthat when the model predicts a loan will be apporved, it is correct 80% of the time. The recall is 0.95, meaning that the model correctly identifies 95% of all actual loan approvals. From the weighted average column, we can see the overall accuracy of the model is 0.80, meaning that the model correctly predicts loan eligibility 80% of the time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "641cabef",
    "metadata": {},
    "source": [
@@ -2123,6 +2139,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "26d83ebf",
+   "metadata": {},
+   "source": [
+    "From the precision-recall curve, we can see that as we increase the recall, the precision remains high. The AP score is 0.87. This indicates good performance of the model in identifying loan approvals. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d18e78c2",
    "metadata": {},
    "source": [
@@ -2166,6 +2190,14 @@
     "    y_test\n",
     ")\n",
     "roc_disp.ax_.set_title(\"ROC Curve\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc15a8ae",
+   "metadata": {},
+   "source": [
+    "We can see from the ROC curve and the AUC score of 0.80 that the model has good ability to distinguish between approved and denied loan applications. The score suggests that while the model is effective at distinguishing between the two classes, there is still room for improvement for its predictive performance."
    ]
   },
   {
