Add Quarto configuration and initial loan analysis report files

--- a/report/loan-analysis-results.qmd
+++ b/report/loan-analysis-results.qmd
@@ -29,7 +29,7 @@ cross_validation_results = pd.read_csv("../results/tables/cross_validation_resul
 
 test_scores = pd.read_csv("../results/tables/test_scores.csv")
 
-confusion_matrix = pd.read_csv("../results/tables/confusion_matrix.csv")
+confusion_matrix_csv = pd.read_csv("../results/tables/confusion_matrix.csv")
 ```
 
 ## Model Testing
@@ -38,9 +38,9 @@ confusion_matrix = pd.read_csv("../results/tables/confusion_matrix.csv")
 
 ## Confusion Matrix
 
-![Confusion Matrix](../results/figures/confusion_matrix.png){#fig-confusion_matrix width=100%}
+![Confusion Matrix](../results/figures/confusion_matrix.png){#fig-confusion_matrix_png width=100%}
 
-Based on the confusion matrix, we can derive several key performance metrics for our loan eligibility prediction model. The model correctly predicted `{python} confusion_matrix.iloc[0, 1]` loan denials and `{python} confusion_matrix.iloc[1, 2]` loan approvals. The model incorrectly predicted `{python} confusion_matrix.iloc[0, 2]` loan denials as approvals (false positives) and `{python} confusion_matrix.iloc[1, 1]` loan approvals as denials (false negatives). From this, we can see that the model is better at predicting approvals than denials. Depending on the business context, we may prefer to minimize the false negatives to avoid losing out on potential customers who would have been approved for loans. But, we also need to consider the cost of false positives and minimizing the number of bad loans approved. 
+Based on the confusion matrix, we can derive several key performance metrics for our loan eligibility prediction model. The model correctly predicted `{python} confusion_matrix_csv.iloc[0, 1]` loan denials and `{python} confusion_matrix_csv.iloc[1, 2]` loan approvals. The model incorrectly predicted `{python} confusion_matrix_csv.iloc[0, 2]` loan denials as approvals (false positives) and `{python} confusion_matrix_csv.iloc[1, 1]` loan approvals as denials (false negatives). From this, we can see that the model is better at predicting approvals than denials. Depending on the business context, we may prefer to minimize the false negatives to avoid losing out on potential customers who would have been approved for loans. But, we also need to consider the cost of false positives and minimizing the number of bad loans approved. 
 
 ## Classification Report
 
